# mos6502

./: .gitignore  Makefile  README.md  cabal.project  flake.nix  mos6502.cabal
.github/workflows/: ci.yml
quartus/: MOS6502.qpf  MOS6502.qsf  MOS6502.sdc  MOS6502.v  topEntity.v
src/: DebugTopLevel.hs  TopLevel.hs
src/Cpu/: Alu.hs  Cpu.hs  CpuState.hs  Data.hs  Executor.hs  Instructions.hs  Microcode.hs
src/Cpu/Microcode/: Data.hs  Gen.hs  Map.hs  Rom.hs  Steps.hs
src/Utilities/: SevenSegment.hs  Utils.hs
tests/: doctests.hs  unittests.hs
tests-verilator/: Common.cpp  Common.hpp  CpuTest.cpp  CpuTest.hpp  Instructions.cpp  Instructions.hpp
tests-verilator/ImmediateInstructions/: test.cpp
tests-verilator/ResetCheck/: test.cpp
tests-verilator/SanityCheck/: test.cpp
tests/Tests/: Alu.hs  CpuDecoder.hs  CpuExecutor.hs  CpuGenerator.hs  CpuInstructions.hs  SanityCheck.hs
